added files from brightspace

--- a/Ladeskab.Application/Ladeskab.Application.csproj
+++ b/Ladeskab.Application/Ladeskab.Application.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Program.cs" />
+    <Compile Remove="TestUsbChargerSimulator.cs" />
+    <Compile Remove="UsbChargerSimulator.cs" />
+  </ItemGroup>
+
 </Project>
