Projects changed to core 5.0

--- a/Ladeskab.Application/Ladeskab.Application.csproj
+++ b/Ladeskab.Application/Ladeskab.Application.csproj
@@ -2,12 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="TestUsbChargerSimulator.cs" />
-    <Compile Remove="UsbChargerSimulator.cs" />
-  </ItemGroup>
 
 </Project>
